--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Publish to GitHub Packages Apache Maven
         #        run: mvn --batch-mode deploy
-        run: mvn deploy
+        run: mvn deploy -P github
         env:
           GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
 
@@ -99,34 +99,34 @@ jobs:
           author_email: liam@unum.id
           message: '[Release ${{ env.RELEASE_VERSION }}] ${{ env.TAG_MESSAGE }}'
           add: '["pom.xml"]'
-          branch: main
+          branch: profiles # todo main
 
       # ref: https://github.com/actions/create-release
-      #      - name: Create Release
-      #        id: create_release
-      #        uses: actions/create-release@v1
-      #        env:
-      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      #        with:
-      #          tag_name: ${{ env.RELEASE_VERSION }}
-      #          release_name: ${{ env.RELEASE_VERSION }}
-      #          body: ${{ env.TAG_MESSAGE }}
-      #          # body: |
-      #          #   Changes in this Release
-      #          #   - First Change
-      #          #   - Second Change
-      #          draft: false
-      #          prerelease: false
-      #          commitish: main
-
-      # ref: https://github.com/marketplace/actions/upload-files-to-a-github-release
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          # opting to go with thin jar here because not really an executable project
-          #          file: target/types-java-${{ env.RELEASE_VERSION }}-jar-with-dependencies.jar
-          file: target/types-java-${{ env.RELEASE_VERSION }}.jar
-          tag: ${{ env.RELEASE_VERSION }}
+          tag_name: ${{ env.RELEASE_VERSION }}
+          release_name: ${{ env.RELEASE_VERSION }}
           body: ${{ env.TAG_MESSAGE }}
-#          commitish: pub # sadly doesn't work with this action, always release from main, which in reality is fine.
+          # body: |
+          #   Changes in this Release
+          #   - First Change
+          #   - Second Change
+          draft: false
+          prerelease: false
+          commitish: profiles # todo main
+
+#      # ref: https://github.com/marketplace/actions/upload-files-to-a-github-release
+#      - name: Upload binaries to release
+#        uses: svenstaro/upload-release-action@v2
+#        with:
+#          repo_token: ${{ secrets.GITHUB_TOKEN }}
+#          # opting to go with thin jar here because not really an executable project
+#          #          file: target/types-java-${{ env.RELEASE_VERSION }}-jar-with-dependencies.jar
+#          file: target/types-java-${{ env.RELEASE_VERSION }}.jar
+#          tag: ${{ env.RELEASE_VERSION }}
+#          body: ${{ env.TAG_MESSAGE }}
+##          commitish: pub # sadly doesn't work with this action, always release from main, which in reality is fine.
