--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,34 @@
     <groupId>id.unum</groupId>
     <artifactId>types-java</artifactId>
     <version>0.0.9</version>
+    <packaging>jar</packaging>
+
+    <!--The following info is necessary per https://central.sonatype.org/publish/requirements/-->
+    <name>UnumID Java Types</name>
+    <description>An library of java objects used in the Unum ID ecosystem</description>
+    <url>https://github.com/UnumID/types-java</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Unum ID Admin</name>
+            <email>admin@unum.id</email>
+            <organization>Unum ID</organization>
+            <organizationUrl>https://www.unum.id</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/UnumID/types-java.git</connection>
+        <developerConnection>scm:git:ssh://github.com/UnumID/types-java.git</developerConnection>
+        <url>https://github.com/UnumID/types-java/tree/main</url>
+    </scm>
 
     <properties>
         <grpc.version>1.38.0</grpc.version><!-- CURRENT_GRPC_VERSION -->
