--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,8 +37,10 @@ jobs:
       - name: setup java
         uses: actions/setup-java@v2
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '16'
+          distribution: 'temurin'
+          java-version: '11'
+          #          distribution: 'zulu' # See 'Supported distributions' for available options
+          #          java-version: '16'
           cache: 'maven'
 
       - name: Bump POM Version
