--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <gpg.executable>gpg2</gpg.executable>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <gpg.keyname>A40CC86120560B5631B693172DE7B3CB0F11DB7F</gpg.keyname>
+<!--        <gpg.keyname>A40CC86120560B5631B693172DE7B3CB0F11DB7F</gpg.keyname>-->
     </properties>
 
     <!--    <distributionManagement>-->
