--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -68,7 +68,7 @@ jobs:
           gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
 
       - name: Publish to Apache Maven Central
-        run: mvn clean deploy -P ossrh
+        run: mvn clean deploy -P ossrh -X -e
         env:
           MAVEN_USERNAME: rsmets
           MAVEN_CENTRAL_TOKEN: ${{ secrets.OSSRH_TOKEN }}
