--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -67,6 +67,12 @@ jobs:
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
           gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
 
+      - name: print settings
+        run: |
+          cat settings.xml
+          echo "done"
+          cat ~/.m2/settings.xml
+
       - name: Publish to Apache Maven Central
         run: mvn clean deploy -P ossrh -X -e
         env:
