--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,8 +37,10 @@ jobs:
       - name: setup java
         uses: actions/setup-java@v2
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '16'
+          distribution: 'temurin'
+          java-version: '11'
+          #          distribution: 'zulu' # See 'Supported distributions' for available options
+          #          java-version: '16'
           cache: 'maven'
 
       - name: Bump POM Version
@@ -49,26 +51,34 @@ jobs:
 
       - name: Publish to GitHub Packages Apache Maven
         #        run: mvn --batch-mode deploy
-        run: mvn deploy
+        run: mvn clean deploy -P github
         env:
           GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
 
+      #        ref: https://www.marcd.dev/articles/2021-03/mvncentral-publish-github
+      #        ref: https://www.marcd.dev/articles/2021-03/mvncentral-publish-github
+      #        ref: https://docs.github.com/en/actions/publishing-packages/publishing-java-packages-with-maven#publishing-packages-to-the-maven-central-repository-and-github-packages
       #      - name: Set up Apache Maven Central
       #        uses: actions/setup-java@v2
       #        with: # running setup-java again overwrites the settings.xml
       #          distribution: 'temurin'
       #          java-version: '11'
-      #          server-id: maven # Value of the distributionManagement/repository/id field of the pom.xml
+      #          cache: 'maven'
+      #          server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
       #          server-username: MAVEN_USERNAME # env variable for username in deploy
       #          server-password: MAVEN_CENTRAL_TOKEN # env variable for token in deploy
       #          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
       #          gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
       #
+      #      - name: print settings
+      #        run: |
+      #          cat ~/.m2/settings.xml
+      #
       #      - name: Publish to Apache Maven Central
-      #        run: mvn deploy
+      #        run: mvn clean deploy -P ossrh -X -e
       #        env:
-      #          MAVEN_USERNAME: maven_username123
-      #          MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
+      #          MAVEN_USERNAME: rsmets
+      #          MAVEN_CENTRAL_TOKEN: ${{ secrets.OSSRH_TOKEN }}
       #          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
       # ref: https://github.com/marketplace/actions/delete-tag-and-release
@@ -102,31 +112,31 @@ jobs:
           branch: main
 
       # ref: https://github.com/actions/create-release
-      #      - name: Create Release
-      #        id: create_release
-      #        uses: actions/create-release@v1
-      #        env:
-      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      #        with:
-      #          tag_name: ${{ env.RELEASE_VERSION }}
-      #          release_name: ${{ env.RELEASE_VERSION }}
-      #          body: ${{ env.TAG_MESSAGE }}
-      #          # body: |
-      #          #   Changes in this Release
-      #          #   - First Change
-      #          #   - Second Change
-      #          draft: false
-      #          prerelease: false
-      #          commitish: main
-
-      # ref: https://github.com/marketplace/actions/upload-files-to-a-github-release
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          # opting to go with thin jar here because not really an executable project
-          #          file: target/types-java-${{ env.RELEASE_VERSION }}-jar-with-dependencies.jar
-          file: target/types-java-${{ env.RELEASE_VERSION }}.jar
-          tag: ${{ env.RELEASE_VERSION }}
+          tag_name: ${{ env.RELEASE_VERSION }}
+          release_name: ${{ env.RELEASE_VERSION }}
           body: ${{ env.TAG_MESSAGE }}
-#          commitish: pub # sadly doesn't work with this action, always release from main, which in reality is fine.
+          # body: |
+          #   Changes in this Release
+          #   - First Change
+          #   - Second Change
+          draft: false
+          prerelease: false
+          commitish: main
+
+#      # ref: https://github.com/marketplace/actions/upload-files-to-a-github-release
+#      - name: Upload binaries to release
+#        uses: svenstaro/upload-release-action@v2
+#        with:
+#          repo_token: ${{ secrets.GITHUB_TOKEN }}
+#          # opting to go with thin jar here because not really an executable project
+#          #          file: target/types-java-${{ env.RELEASE_VERSION }}-jar-with-dependencies.jar
+#          file: target/types-java-${{ env.RELEASE_VERSION }}.jar
+#          tag: ${{ env.RELEASE_VERSION }}
+#          body: ${{ env.TAG_MESSAGE }}
+##          commitish: pub # sadly doesn't work with this action, always release from main, which in reality is fine.
