--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <protobuf.version>3.17.3</protobuf.version>
         <log4j.version>2.14.0</log4j.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <gpg.executable>gpg</gpg.executable>
+        <gpg.executable.type>gpg</gpg.executable.type>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
@@ -70,7 +70,7 @@
                 </property>
             </activation>
             <properties>
-                <gpg.executable>${gpg.executable}</gpg.executable>
+                <gpg.executable>${gpg.executable.type}</gpg.executable>
             </properties>
             <distributionManagement>
                 <snapshotRepository>
